# ChangeLog for app-editors/ne
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/ne/ChangeLog,v 1.33 2008/06/07 22:18:26 swegener Exp $

*ne-1.43 (07 Jun 2008)

  07 Jun 2008; Sven Wegener <swegener@gentoo.org> +ne-1.43.ebuild:
  Version bump.

  10 Oct 2007; Christian Faulhammer <opfer@gentoo.org> ne-1.42.ebuild:
  remove PROVIDE=virtual/editor as we have now a new-style virtual

  01 Mar 2007; <genstef@gentoo.org> ne-1.42.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  18 Sep 2006; Sven Wegener <swegener@gentoo.org> -ne-1.39.ebuild,
  -ne-1.41.ebuild, ne-1.42.ebuild:
  Remove -O3 from makefile internal CFLAGS. Cleanup.

  18 Sep 2006; <ticho@gentoo.org> ne-1.42.ebuild:
  Stable on x86, bug #147936.

  18 Sep 2006; Brent Baude <ranger@gentoo.org> ne-1.42.ebuild:
  Marking ppc64 ne-1.42 ppc64 stable per bug 147936

  17 Sep 2006; <nixnut@gentoo.org> ne-1.42.ebuild:
  Stable on ppc wrt bug 147936

  17 Sep 2006; Thomas Cort <tcort@gentoo.org> ne-1.42.ebuild:
  Stable on amd64 wrt Bug #147936.

*ne-1.42 (05 Mar 2006)

  05 Mar 2006; Sven Wegener <swegener@gentoo.org> +ne-1.42.ebuild:
  Version bump.

  20 Sep 2005; Kito <kito@gentoo.org> ne-1.41.ebuild:
  ~ppc-macos. Closes Bug 106593

*ne-1.41 (17 Sep 2005)

  17 Sep 2005; Sven Wegener <swegener@gentoo.org> -ne-1.40.ebuild,
  +ne-1.41.ebuild:
  Version bump.

*ne-1.40 (27 Aug 2005)

  27 Aug 2005; Sven Wegener <swegener@gentoo.org> +ne-1.40.ebuild:
  Version bump.

  16 May 2005; Sven Wegener <swegener@gentoo.org> ne-1.39.ebuild:
  Added cross-compile support.

  21 Apr 2005; Simon Stelling <blubb@gentoo.org> ne-1.39.ebuild:
  stable on amd64

  05 Mar 2005; Markus Rothe <corsair@gentoo.org> ne-1.39.ebuild:
  Stable on ppc64

  21 Jan 2005; Sven Wegener <swegener@gentoo.org>
  -files/1.36-include-fix.patch, -ne-1.36.ebuild, -ne-1.38.ebuild:
  Removed old ebuilds and files.

  21 Jan 2005; Lars Weiler <pylon@gentoo.org> ne-1.39.ebuild: